# Jenkins

./: .gitignore  Jenkinsfile  README.md
my_cpp_app/: Jenkinsfile  README.md
my_cpp_app/source/: CMakeLists.txt  Dockerfile  Jenkinsfile  JenkinsfileBuildImage  deployementservice.yml  dockerfile  main.cpp
my_cpp_app/source/include/: exampletests.h  operations.h  sum_integers.h
my_cpp_app/source/src/: sum_integers.cpp
my_cpp_app/source/test/: CMakeLists.txt  OperationsTests.cpp  Tests.cpp
my_python_app/: Jenkinsfile  calc.py  employee.py  test_calc.py  test_employee.py
my_python_app/flask/app/: README.md  app.py  requirements.txt
my_python_app/flask/app/app/: admin_views.py  views.py
my_python_app/flask/app/app/templates/admin/: dashboard.html  profile.html
my_python_app/flask/app/app/templates/admin/templates/: admin_template.html
my_python_app/flask/app/app/templates/public/: about.html  index.html
my_python_app/flask/app/app/templates/public/templates/: public_template.html
